# y3s2_caie_assessment

./: README.md  eda.html  eda.ipynb  notes.txt  pyproject.toml  requirements.txt
annex/: cleaning.ipynb  modelling.ipynb  post_cleaning.ipynb  preliminary_data_analysis.ipynb  test_metrics_investigation.ipynb
conf/base/: catalog.yml  parameters_dataprep.yml  parameters_modelling.yml
src/y3s2_caie_assessment/: __init__.py  __main__.py  settings.py
src/y3s2_caie_assessment.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/y3s2_caie_assessment/pipelines/dataprep/: __init__.py  nodes.py  pipeline.py
src/y3s2_caie_assessment/pipelines/modelling/: __init__.py  nodes.py  pipeline.py
tests/pipelines/dataprep/: test_pipeline.py
tests/pipelines/modelling/: test_pipeline.py
