[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "y3s2_caie_assessment"
readme = "README.md"
dynamic = [ "version",]
dependencies = [ "ipython>=8.10", "jupyterlab>=3.0", "notebook", "kedro~=0.19.10",]

[project.scripts]
y3s2-caie-assessment = "y3s2_caie_assessment.__main__:main"

[tool.kedro]
package_name = "y3s2_caie_assessment"
project_name = "y3s2_caie_assessment"
kedro_init_version = "0.19.10"
tools = "['None']"
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "y3s2_caie_assessment.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
